# MLOps_Equipo_63

./: .dvcignore  .gitignore  LICENSE  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
data/: raw.dvc
docs/: mkdocs.yml
docs/docs/: index.md
mlops_equipo_63/: __init__.py  data_loader.py  evaluation.py  feature_engineering.py  hyperparameter_optimization.py  model_training.py  prepare.py  preprocessing.py
mlops_equipo_63/scripts/: evaluate_model.py  prepare_data.py  train_model.py
mlruns/0/: meta.yaml
mlruns/688194890310013965/: meta.yaml
mlruns/688194890310013965/031e602c67144c4a9a4e7a9e61522fde/: meta.yaml
mlruns/688194890310013965/031e602c67144c4a9a4e7a9e61522fde/metrics/: best_cv_accuracy  best_cv_auc
mlruns/688194890310013965/031e602c67144c4a9a4e7a9e61522fde/params/: xgb_colsample_bytree  xgb_learning_rate  xgb_subsample
mlruns/688194890310013965/7157a2ac59674a0a855935b0a5a5da63/: meta.yaml
mlruns/688194890310013965/7157a2ac59674a0a855935b0a5a5da63/metrics/: best_cv_accuracy  best_cv_auc
mlruns/688194890310013965/86242e85ee214a8a9ec77cfc2265418d/: meta.yaml
mlruns/688194890310013965/aae991861b604d6684a53b84d5e52fc7/: meta.yaml
mlruns/688194890310013965/acc4f52fad4c4309b743e02e399f4eed/: meta.yaml
mlruns/688194890310013965/f126650e10cb4b5d95e54c7d0319b5c1/: meta.yaml
mlruns/models/NewsPopularityModel/: meta.yaml
notebooks/: Equipo63_Fase2_test.ipynb
notebooks/mlruns/888286442791444831/: meta.yaml
reports/: data_quality.json  metrics.json
(+418 files in other folders)
